--- a/templates/planes/form_plan.html
+++ b/templates/planes/form_plan.html
@@ -1,3 +1,6 @@
+{% extends 'users/base_dashboard.html' %}
+{% block title %}{% if plan %}Editar Plan{% else %}Nuevo Plan{% endif %}{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,10 +8,7 @@
     <title>{% if plan %}Editar Plan{% else %}Nuevo Plan{% endif %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light p-4">
-{% extends 'users/base_dashboard.html' %}
-{% block title %}{% if plan %}Editar Plan{% else %}Nuevo Plan{% endif %}{% endblock %}
-{% block content %}
+<body class="bg-light">
 <div class="container">
   <h3 class="fw-bold text-center mb-4">{% if plan %}✏️ Editar Plan{% else %}🧾 Registrar Nuevo Plan{% endif %}</h3>
 
